Expose underlying char[] used for String values. Support BigDecimal from Strings.