@@ -1,4 +1,5 @@
 apply plugin: 'java-library'
+apply plugin: 'org.javamodularity.moduleplugin'
 apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.bintray'
 apply plugin: 'pl.allegro.tech.build.axion-release'
@@ -35,43 +36,9 @@ dependencies {
   testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:+'
 }
 
-compileJava {
-  inputs.property("moduleName", moduleName)
-  doFirst {
-    options.compilerArgs = [
-        '--module-path', classpath.asPath,
-    ]
-    classpath = files()
-  }
-}
-
-compileTestJava {
-  inputs.property("moduleName", moduleName)
-  doFirst {
-    options.compilerArgs = [
-        '--module-path', classpath.asPath,
-        '--add-modules', 'org.junit.jupiter.api',
-        '--add-reads', "$moduleName=org.junit.jupiter.api",
-        '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
-    ]
-    classpath = files()
-  }
-}
 
 test {
   useJUnitPlatform()
-
-  inputs.property("moduleName", moduleName)
-  doFirst {
-    jvmArgs = [
-        '--module-path', classpath.asPath,
-        '--add-modules', 'ALL-MODULE-PATH',
-        '--add-reads', "$moduleName=org.junit.jupiter.api",
-        '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
-        '--add-opens', "$moduleName/systems.comodal.jsoniter=org.junit.platform.commons"
-    ]
-    classpath = files()
-  }
 }
 
 afterEvaluate {
